test and docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     depends_on:
       - mongo
   frontend:
-    build: ./frontend
+    build: ./frontend/axis-fe
     ports:
       - "3000:3000"
     depends_on:
