--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - MONGO_URI=mongodb://mongo:27017/fintech
+      - MONGO_URI=mongodb://0.0.0.0:27017/fintechDB
     depends_on:
       - mongo
   frontend:
